[gd_scene load_steps=3 format=3 uid="uid://btmxi721m3v3q"]

[ext_resource type="Script" uid="uid://cvnuos8p6gafm" path="res://Scripts/game_over_screen.gd" id="1_0gua7"]
[ext_resource type="Script" uid="uid://cfcnq0m7pxitr" path="res://Scripts/high_score_label.gd" id="2_jb6in"]

[node name="Game_Over_Screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0gua7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.635294)

[node name="Game_Over_Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 113.0
offset_right = 95.0
offset_bottom = 162.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Game Over"

[node name="buttons_container" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -38.0
offset_right = 72.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2

[node name="Replay_Button" type="Button" parent="buttons_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Replay"

[node name="Main_Menu_Button" type="Button" parent="buttons_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main menu"

[node name="Exit_Game_Button" type="Button" parent="buttons_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Exit "

[node name="High_Score_Label" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -105.0
offset_right = 206.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 35
text = "High Score: 9999999999"
script = ExtResource("2_jb6in")

[connection signal="pressed" from="buttons_container/Replay_Button" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="buttons_container/Main_Menu_Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="buttons_container/Exit_Game_Button" to="." method="_on_exit_game_button_pressed"]
